--- a/KN basic py.ipynb
+++ b/KN basic py.ipynb
@@ -265,7 +265,7 @@
    ],
    "source": [
     "#Indexing in list\n",
-    "lst[:]"
+    "lst[:] #retrives all items "
    ]
   },
   {
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
