--- a/KN basic py.ipynb
+++ b/KN basic py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "04322eae",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "79d71a88",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "ec4f093d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "ac8dd34f",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "f3280da9",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ca03c948",
    "metadata": {},
    "outputs": [],
@@ -117,10 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "d71e1c61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_str.isalpha() or str_example.isnum()"
    ]
@@ -136,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "id": "3bfc5457",
    "metadata": {},
    "outputs": [
@@ -146,7 +157,7 @@
        "list"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "e1e61185",
    "metadata": {},
    "outputs": [],
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "bb2231c2",
    "metadata": {},
    "outputs": [],
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "2a1754f7",
    "metadata": {},
    "outputs": [
@@ -187,7 +198,7 @@
        "6"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "771754b9",
    "metadata": {},
    "outputs": [],
@@ -217,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "51648d2c",
    "metadata": {},
    "outputs": [],
@@ -227,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "e68add43",
    "metadata": {},
    "outputs": [
@@ -237,7 +248,7 @@
        "['Mathematics', 'chemistry', 100, 200, 300, 204, 'Nabbo', ['John', 'Bala']]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "2da6b7d6",
    "metadata": {},
    "outputs": [
@@ -258,7 +269,7 @@
        "['Mathematics', 'chemistry', 100, 200, 300, 204, 'Nabbo', ['John', 'Bala']]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "30b74982",
    "metadata": {},
    "outputs": [
@@ -280,7 +291,7 @@
        "['Mathematics']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "6e830989",
    "metadata": {},
    "outputs": [
@@ -301,7 +312,7 @@
        "['chemistry', 100, 200, 300, 204, 'Nabbo', ['John', 'Bala']]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "2614f489",
    "metadata": {},
    "outputs": [
@@ -322,7 +333,7 @@
        "['chemistry', 100, 200, 300, 204]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,9 +343,302 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44785d19",
+   "metadata": {},
+   "source": [
+    "## Insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ec47a42b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mathematics', 'chemistry', 'amity', 'amity', 100, 200, 300, 204, 'Nabbo', ['John', 'Bala']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst.insert(2, 'amity') #insert item in 2nd position\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f8a062c",
+   "metadata": {},
+   "source": [
+    "## Extend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c611d828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1,2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "20d60eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst.extend([8,9]) #doesn't create nested list\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c161a8be",
+   "metadata": {},
+   "source": [
+    "## Various Operations that we can perform in List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "99adfbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=[1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c3d0a4b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(lst) #adds all the items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "89fc6b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst*5 #repeats 5 times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2273e76",
+   "metadata": {},
+   "source": [
+    "## Pop() Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7b82a9fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.pop() #removes element; default = last item\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "27a703e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst.pop(0) #removes first item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "6847153a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4456d5cf",
+   "metadata": {},
+   "source": [
+    "## count():Calculates total occurrence of given element of List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "41eed0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst=[1,1,2,3,4,5]\n",
+    "lst.count(1)      #2 elements are present and value is 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "181cc3d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index(): Returns the index of first occurrence. Start and End index are not necessary parameters\n",
+    "lst.index(1,1,4) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd7803ec",
+   "metadata": {},
+   "source": [
+    "1. The first argument is 1. This is the element you're looking for in the list.\n",
+    "2. The second argument is 1. This is the starting index for the search. The search for the element 1 will begin from this index in the list.\n",
+    "3. The third argument is 4. This is the ending index for the search. The search for the element 1 will continue until this index in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "b34babea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Min and Max\n",
+    "min(lst)\n",
+    "max(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc1985b",
+   "metadata": {},
+   "source": [
+    "## SETS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9f166c6",
+   "metadata": {},
+   "source": [
+    "A Set is an unordered collection data type that is iterable, mutable, and has no duplicate elements. Python's set class represents the mathematical notion of a set.This is based on a data structure known as a hash table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12185caa",
+   "id": "32ed87cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -356,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
