--- a/KN Numpy .ipynb
+++ b/KN Numpy .ipynb
@@ -804,8 +804,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "abff8ab5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([40, 91, 39, 58, 57, 20, 64, 21])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#randint provides with integer\n",
+    "np.random.randint(0,100,8) #b/w 0 to 100 select 8 numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b42fdb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -827,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
