--- a/Python-HARD WAY.ipynb
+++ b/Python-HARD WAY.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "d3aebe79",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "737e8eb7",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "2ea6bf50",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bf5b2309",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "3f5450e9",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e944429d",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "12030c2c",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "eb526c62",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "e9f5e7c1",
    "metadata": {},
    "outputs": [
@@ -227,12 +227,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\tI'm tabbed in.\n",
+      "I'm split\n",
+      "on a line.\n",
+      "I'm \\ a \\ cat.\n",
+      "\n",
+      "I'll do a list:\n",
+      "\t* Cat food\n",
+      "\t* Fishies\n",
+      "\t* Catnip\n",
+      "\t* Grass\n",
+      "\n",
       "I'm \\ a \\ cat.\n"
      ]
     }
    ],
    "source": [
+    "tabby_cat = \"\\tI'm tabbed in.\"\n",
     "backslash_cat = \"I'm \\\\ a \\\\ cat.\"\n",
+    "persian_cat = \"I'm split\\non a line.\"\n",
+    "backslash_cat = \"I'm \\\\ a \\\\ cat.\"\n",
+    "\n",
+    "fat_cat = \"\"\"\n",
+    "I'll do a list:\n",
+    "\\t* Cat food\n",
+    "\\t* Fishies\n",
+    "\\t* Catnip\\n\\t* Grass\n",
+    "\"\"\"\n",
+    "\n",
+    "print(tabby_cat)\n",
+    "print(persian_cat)\n",
+    "print(backslash_cat)\n",
+    "print(fat_cat)\n",
+    "\n",
     "print(backslash_cat)"
    ]
   },
